<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/vehicle_entries"
            app:entryValues="@array/vehicle_values"
            app:key="vehicle"
            app:title="Vehicle"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/brand_entries"
            app:entryValues="@array/brand_values"
            app:key="brand"
            app:title="Brand"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/model_entries"
            app:entryValues="@array/model_values"
            app:key="model"
            app:title="Model"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/application">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/darkTheme" />

        <ListPreference
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

        <!--<SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>