<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDeleteUser">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/logo"
            android:layout_width="228dp"
            android:layout_height="100dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/logo_seai"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/delete_account"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/are_you_sure_that_you_want_to_delete_your_account"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/no_return_to_homepage"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/yes_delete_account"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>