<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityResetPassword">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/logo"
            android:layout_width="228dp"
            android:layout_height="100dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/logo_seai"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/password_reset_instructions"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/recover_email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:gravity="center"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reset_password"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>